--- a/css/search.css
+++ b/css/search.css
@@ -34,7 +34,32 @@ header{
     margin-top: 0;
 }
 
+@media screen and (max-width: 979px) {
 
+    header{
+        box-shadow: none;
+    }
+
+    .wrapper{
+        margin-top: 90px;
+    }
+
+    .search-result-text{
+        padding-left: 20px;
+    }
+
+    .search-result{
+        font-size: 14px;
+        background-color: #ffffff;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+        position: fixed;
+        height: 40px;
+        width: 100%;
+        top: 50px;
+        z-index: 1;
+    }
+
+}
 
 .noHit{
     height: 500px;
