--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -14,16 +14,15 @@
 }
 .random_grid {
     margin: 0 auto;
-    margin-top: 200px;
 }
 .random_grid li {
     display: inline-block;
-    width: 343px;
+    width: 87%;
     height: 352px;
     background-color: #ffffff;
     box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
     border-radius: 15px;
-    margin: 20px 20px;
+    margin: 32px 16px 0 16px;
 }
 
 .random_grid a{
@@ -39,7 +38,6 @@
     width:100%;
     height:236px;
     margin-bottom: 30px;
-/*    border-radius: 8px;*/
     border-radius: 8px 8px 0 0 / 8px 8px 0 0;
 }
 
@@ -75,10 +73,14 @@
 .random_description {
     position:absolute;
     top: 92%;
-    width: 100%;
+    white-space: nowrap;
+    width: 87%;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
     font-size: 1.4rem;
     color: #031e36;
-    padding: 0 0 0 16px;
+    padding: 0 16px 0 16px;
     text-align: left;
     font-family: brandonRegular;
 }
@@ -86,6 +88,21 @@
 /*スラッグがクラス名になる*/
 .sports,.evevt,.social-activity,.hobby{
     margin: 0 2% 0 0;
+}
+.sports i{
+    color: #E63C6E;
+}
+.event i{
+    color: #5AC8DC;
+}
+.social-activity i{
+    color: #FAC81E;
+}
+.hobby i{
+    color: #78C850;
+}
+.no-genre i{
+    color: #272727;
 }
 @media screen and (min-width:480px) {
     /*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
@@ -103,24 +120,22 @@
 
 
     .random {
-        padding: 80px 0 140px 0px;
+        padding: 0 0 140px 0;
         display: block;
-        width: 97%;
+        width: 100%;
         margin: 0 auto;
     }
     .random_grid {
         margin: 0 auto;
-        margin-top: 200px;
     }
     .random_grid li {
         display: inline-block;
-        width: 300px;
-        height: 317px;
-        padding: 40px 20px 30px;
+        width: 343px;
+        height: 352px;
         background-color: #ffffff;
         box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
         border-radius: 15px;
-        margin: 35px 33px;
+        margin: 32px 16px 0 16px;
     }
 
     .random_grid a{
@@ -133,44 +148,54 @@
     }
     .random_icon {
         position: absolute;
-        top: -19px;
-        width: 100%;
-        height:186px;
-        /*    border-radius: 400px;*/
-        box-shadow: 0px 0px 10px #ccc;
+        width:100%;
+        height:236px;
         margin-bottom: 30px;
+        border-radius: 8px 8px 0 0 / 8px 8px 0 0;
+    }
+
+    .random_content{
+        width: 100%;
+        height: 352px;
     }
 
     .random_tags_parent{
         position:absolute;
-        top: 46%;
-        margin-top: 15px;
+        top: 294px;
         width: 100%;
-        line-height: 30px;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         color: #031e36;
+        text-align: left;
+        padding: 0 0 0 16px;
     }
 
     .random_name {
         position: absolute;
-        top: 61%;
+        top: 252px;
         width: 100%;
-        text-align: center;
-        font-size: 3.0rem;
-        font-weight: 200;
+        padding: 0 0 0 16px;
+        text-align: left;
+        font-size: 2.4rem;
+        font-family: brandonRegular;
         letter-spacing: 5px;
         color: #b7a380;
         margin-bottom: 15px;
     }
 
+
     .random_description {
         position:absolute;
-        top: 68%;
-        margin-top: 15px;
-        width: 100%;
-        line-height: 30px;
-        font-size: 1.6rem;
+        top: 92%;
+        white-space: nowrap;
+        width: 87%;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        font-size: 1.4rem;
         color: #031e36;
+        padding: 0 16px 0 16px;
+        text-align: left;
+        font-family: brandonRegular;
     }
 }
 
