--- a/css/about.css
+++ b/css/about.css
@@ -19,7 +19,7 @@ body{
 }
 
 .about .about_head{
-  min-height: 40%;
+  height: 232px;
   background-image: url(../img/home_img.jpg);
   background-attachment: scroll;
   background-repeat: no-repeat;
@@ -33,6 +33,8 @@ body{
   width: 100%;
 
   display: table;
+  font-family: "brandonbold";
+
 }
 
 .about .about_head .about_title .about_table{
@@ -64,14 +66,11 @@ body{
   font-size: 6.4rem;
   padding: 4px;
 
-  border-bottom: 2px;
-  border-style: dashed;
-
   display: block;
   margin: auto;
 
   margin-top: 24px;
-  margin-bottom: 32px;
+  margin-bottom: 4px;
 
 }
 
@@ -238,9 +237,6 @@ body{
   font-weight: bold;
   font-size: 3.6rem;
   padding: 4px;
-
-  border-bottom: 2px;
-  border-style: dashed;
 
   display: block;
   margin: auto;
