modify name color

--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -65,7 +65,7 @@
     font-size: 2.4rem;
     font-family: "ヒラギノ角ゴ ProN W6","ヒラギノ角ゴ Pro W6";
     letter-spacing: 5px;
-    color: #b7a380;
+    color: #272727;
     margin-bottom: 15px;
 }
 
@@ -179,7 +179,7 @@
         font-size: 2.4rem;
         font-family: "ヒラギノ角ゴ ProN W6","ヒラギノ角ゴ Pro W6";
         letter-spacing: 5px;
-        color: #b7a380;
+        color: #272727;
         margin-bottom: 15px;
     }
 
