--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,11 @@
+/*　モバイル（iPhone,Android）に関するCSSを記述する*/
 html {
-    font-size: 62.5%;
+font-size: 62.5%;
 }
 body{
     box-sizing: border-box;
-    font-family: "Helvetica Neue","小塚ゴシック";
-    background: #EBEFF1;
+    font-family: "ヒラギノ角ゴ ProN W6","ヒラギノ角ゴ Pro W6";
+    background: #F9F9F9;
 }
 header{
     background-color: #ffffff;
@@ -27,6 +28,14 @@ header{
 }
 
 
-@media screen and (max-width: 636px){
 
+@media screen and (min-width:480px) {
+    /*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
+
+}
+@media screen and (min-width:768px) and ( max-width:1024px) {
+    /*　iPadのCSSを記述する*/
+}
+@media screen and (min-width:1024px) {
+    /*　PC用のCSSを記述する　*/
 }
