--- a/css/home.css
+++ b/css/home.css
@@ -26,6 +26,36 @@ header{
     font-size:0;
     visibility:hidden;
 }
+/*toppage-btn*/
+.pageTop-btn {
+    width: 64px;
+    margin: 0 auto;
+    margin-bottom: 32px;
+}
+
+.pageTop-btn a {
+    display: block;
+    z-index: 999;
+    border-radius: 100%;
+    width: 64px;
+    height: 64px;
+    line-height: 64px;
+    background-color: #272727;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
+}
+
+.pageTop-btn a:hover {
+    text-decoration: none;
+    opacity: 0.7;
+}
+.pageTop-btn i{
+    font-size: 2.4rem;
+    top: 50%;
+}
 
 
 
