--- a/css/about.css
+++ b/css/about.css
@@ -9,262 +9,258 @@ body{
 
 /*---policy---*/
 
+.imageBox{
+    width: 100%;
+    height: 280px;
+    overflow: hidden;
+    position: relative;
+}
+.imageBox img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: 100%;
+}
+.imageBox .head_copy{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #ffffff;
+    text-align: center;
+}
+
+.imageBox .head_title{
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    color: #ffffff;
+    text-align: center;
+    margin: 0 auto;
+}
+
+
+
 /*　モバイル（iPhone,Android）に関するCSSを記述する*/
 .about{
-  font-weight: 100;
-  letter-spacing: 0.2rem;
-  margin-bottom: 50px;
-  font-size: 1.6rem;
-  line-height: normal;
+  padding: 16px;
 }
 
-.about .about_head{
-  height: 232px;
-  background-image: url(../img/home_img.jpg);
-  background-attachment: scroll;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-
+.about_heading{
+    font-family: brandonBold;
+    font-size: 3.2rem;
+    text-align: center;
+    margin-top: 16px;
+    font-weight: normal;
 }
 
-.about .about_head .about_title{
-  min-height: 80%;
-  width: 100%;
-
-  display: table;
-  font-family: "brandonbold";
-
+.lineBox{
+    margin: 0 auto;
+    width: 101px;
+    margin-bottom: 32px;
 }
-
-.about .about_head .about_title .about_table{
-  display: table-cell;
-  vertical-align: middle;
-
-}
-
-.about .about_head .about_title h2{
-  margin: auto;
-  color: #FFF;
-  font-size: 3.6rem;
-  text-align: center;
-}
-
-.about .about_head .about_table .head_title{
-  font-size: 5.2rem;
+.heading_line{
+    text-align: center;
+    display: inline-block;
+    width: 18%;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
+    height: 2.4px;
+    border: 0;
 }
 
 
-.about .about_sentence{
-  margin: 40px;
+.about_description{
+    font-size: 1.2rem;
+    line-height: 24px;
+    font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
 }
 
-.about h3{
-  width: 40%;
-  text-align: center;
-  font-weight: bold;
-  font-size: 6.4rem;
-  padding: 4px;
-
-  display: block;
-  margin: auto;
-
-  margin-top: 24px;
-  margin-bottom: 32px;
-
+.member_heading{
+    font-family: brandonBold;
+    font-size: 3.2rem;
+    text-align: center;
+    margin-top: 16px;
+    font-weight: normal;
 }
 
 
-.about .about_member{
-  margin: 40px;
-  padding: 40px;
-  border-top: 2px;
-  border-style: solid;
-  border-color: #ccc;
-
+.about_member-card{
+    display:-webkit-box;/*--- Androidブラウザ用 ---*/
+    display:-ms-flexbox;/*--- IE10 ---*/
+    display: -webkit-flex;/*--- safari（PC）用 ---*/
+    display:flex;
+    -webkit-box-pack:justify;/*--- Androidブラウザ用 ---*/
+    -ms-flex-pack:justify;/*--- IE10 ---*/
+    -webkit-justify-content:space-between;/*--- safari（PC）用 ---*/
+    justify-content:space-between;
+    webkit-box-lines:multiple;
+    -moz-box-lines:multiple;
+    -webkit-flex-wrap:wrap;
+    -moz-flex-wrap:wrap;
+    -ms-flex-wrap:wrap;
+    flex-wrap:wrap;
+    justify-content: center;
 }
 
-.about .about_member .about_member-icon{
-  font-size: 3.2rem;
-  display: table;
+.member{
+    width: 156px;
+    display: block;
+    text-decoration: none;
 }
 
-.about .about_member .about_member-icon h3{
-  display: table-cell;
+.member_photo{
+    height: 120px;
+    width: 120px;
+    display: block;
+    margin: 0 auto;
+    border-radius: 60px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
 }
 
-.about .about_member .about_member-card{
-  margin: auto;
-  display: table;
-  margin-top: 80px;
+
+.name{
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #272727;
 }
 
-.about .about_member .about_member-card .member{
-  display: block;
-  float: left;
-
-  margin: 40px;
-  margin-bottom: 120px;
-  width: 320px;
-  height: 320px;
-
-  border: solid 0px;
-
+.about-circle{
+    margin-top: 8px;
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: brandonRegular;
+    color: #7b7b7b;
 }
 
-.about .about_member .about_member-card .member .member_photo{
-  height: 240px;
-  width: 240px;
-  margin-left: 40px;
-  margin-right: 40px;
-  border-radius: 120px;
-  margin-bottom: 20px;
 
+.about-position{
+    margin-top: 8px;
+    text-align: center;
+    font-size: 1.4rem;
+    padding: 5px;
+    font-family: brandonBold;
+    color: #272727;
+    margin-bottom: 32px;
 }
 
-.about .about_member .about_member-card .member .name{
-  font-size: 4rem;
-  font-weight: bold;
+.line{
+    display: block;
+    width: 60%;
+    height: 2.4px;
+    border: 0;  /*デフォルトデザインでは線がある場合があるので、消しておく。*/
+}
+.red {
+    background-color: #e63c6e;
+}
+.yellow {
+    background-color: #fac81e;
+}
+.green {
+    background-color: #78c850;
+}
+.blue {
+    background-color: #5ac8dc;
 }
 
-.about .about_member .about_member-card .member .about-circle{
-  border-bottom: solid 4px;
-  font-size: 2rem;
-}
-
-.about .about_member .about_member-card .member .about-position{
-  font-size: 3.2rem;
-  font-weight: bold;
-  letter-spacing: 0rem;
-}
-
-.about .about_member .about_member-card .member p{
-  text-align: center;
-  padding: 5px;
-}
-
-.about .about_member .about_member-card .member .red {border-color: #e63c6e;}
-.about .about_member .about_member-card .member .yellow {border-color: #fac81e;}
-.about .about_member .about_member-card .member .green {border-color: #78c850;}
-.about .about_member .about_member-card .member .blue {border-color: #5ac8dc;}
 
 
 
 
 
 @media screen and (min-width:480px) {
-/*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
-.about .about_head{
-  min-height: 40%;
-  background-image: url(../img/home_img.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.about .about_head .about_title h2{
-  margin: auto;
-  color: #FFF;
-  font-size: 5.2rem;
-  text-align: center;
-}
-
-.about .about_head .about_table .head_title{
-  font-size: 7.2rem;
-}
-}
-@media screen and (min-width:768px) and ( max-width:1024px) {
-/*　iPadのCSSを記述する*/
-.about .about_member .about_member-card .member{
-  display: block;
-  float: left;
-
-  margin: 40px;
-  margin-bottom: 120px;
-  width: 320px;
-  height: 320px;
-
-  border: solid 0px;
 
 }
-
-.about .about_member .about_member-card .member .member_photo{
-  height: 240px;
-  width: 240px;
-  margin-left: 40px;
-  margin-right: 40px;
-  border-radius: 120px;
-  margin-bottom: 20px;
-
-}
+@media screen and (min-width:768px) and (max-width:1024px) {
 
 }
 @media screen and (min-width:1024px) {
-/*　PC用のCSSを記述する　*/
-.about .about_head{
-  min-height: 80%;
-  background-image: url(../img/home_img.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
 
-    margin-left: 40px;
-    margin-right: 40px;
+    .imageBox{
+        overflow: hidden;
+        width: 648px;/* トリミングしたい枠の幅 */
+        height: 280px;/* トリミングしたい枠の高さ */
+        position: relative;
+    }
+    .imageBox img{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: auto;
+        height: 100%;
+    }
+
+    .about_heading{
+        font-size: 3.6rem;
+        margin-top: 16px;
+    }
+    .about{
+        padding-right: 188px;
+        padding-left: 188px;
+    }
+
+    .about_description{
+        font-size: 1.6rem;
+        line-height: 32px;
+        font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
+    }
+
+    .member{
+        width: 230px;
+        display: block;
+        text-decoration: none;
+    }
+    .member_photo{
+        height: 144px;
+        width: 144px;
+        border-radius: 72px;
+    }
+
+    .about_member-card{
+        -webkit-justify-content:space-between;/*--- safari（PC）用 ---*/
+        justify-content:space-between;
+    }
+
+    .name{
+        text-align: center;
+        font-size: 2.2rem;
+        font-weight: bold;
+        color: #272727;
+    }
+
+    .about-circle{
+        margin-top: 8px;
+        text-align: center;
+        font-size: 1.4rem;
+        font-family: brandonRegular;
+        color: #7b7b7b;
+    }
+
+
+    .about-position{
+        margin-top: 8px;
+        text-align: center;
+        font-size: 1.8rem;
+        padding: 5px;
+        font-family: brandonBold;
+        color: #272727;
+        margin-bottom: 32px;
+    }
+
+    .line{
+        display: block;
+        width: 60%;
+        height: 2.4px;
+        border: 0;  /*デフォルトデザインでは線がある場合があるので、消しておく。*/
+    }
+
 }
 
-.about .about_head .about_title h2{
-  margin: auto;
-  color: #FFF;
-  font-size: 2.8rem;
-  text-align: center;
-}
-
-.about .about_head .about_table .head_title{
-  font-size: 4.8rem;
-}
-
-.about .about_sentence{
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.about .about_member{
-  margin-left: 8%;
-  margin-right: 8%;
-}
-
-.about h3{
-  width: 40%;
-  text-align: center;
-  font-weight: bold;
-  font-size: 3.6rem;
-  padding: 4px;
-
-  display: block;
-  margin: auto;
-
-  margin-top: 24px;
-  margin-bottom: 32px;
-
-}
-
-.about .about_member .about_member-card .member{
-  display: block;
-  float: left;
-
-  margin: 40px;
-  margin-bottom: 120px;
-  width: 240px;
-  height: 240px;
-
-  border: solid 0px;
-
-}
-
-.about .about_member .about_member-card .member .member_photo{
-  height: 160px;
-  width: 160px;
-  margin-left: 40px;
-  margin-right: 40px;
-  border-radius: 80px;
-  margin-bottom: 20px;
-
-}
