footerのfontawesomeのアイコンのクラス名が競合しないように変えた

--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -304,7 +304,7 @@ footer a {
     margin-right: 15px;
 }
 
-.fa-home,fa-envelope,fa-exclamation-circle{
+.footer_icon{
     font-size: 1.8rem;
     margin-right: 4px;
 }
