--- a/css/single.css
+++ b/css/single.css
@@ -9,6 +9,7 @@ html {
 body{
     box-sizing: border-box;
     background: #FFFFFF;
+    font-family: 'ヒラギノ角ゴ Pro W6';
 }
 h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
@@ -49,6 +50,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .title__name{
     font-size: 2.8rem;
+    font-weight: 600;
 }
 
 .random_tags_parent{
@@ -119,8 +121,8 @@ h1,h2,h3,h4,h5,h6 {
 .sns__webpage{
 /*    background: gray;*/
 
-    background: #00c300;
-    border-bottom: #40ab40 solid 3px
+    background: #4c7393;
+    border-bottom: #34526f solid 3px
 
 }
 /*facebook 3b5998  border-bottom #404c66 solid 3px*/
