--- a/css/single.css
+++ b/css/single.css
@@ -162,11 +162,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 */
 
-
+.line{
+    display: none;
+}
 .contents h2{
     font-size: 1.8rem;
     font-weight: bold;
-    width: 300px;
+    width: 150px;
 /*    padding: 20px 3px 10px;*/
     padding-top: 0px;
     padding-right: 10px;
@@ -279,5 +281,137 @@ h1,h2,h3,h4,h5,h6 {
         transform: translate(-50%, -50%);
         width: 100%;
         height: auto;
+    }
+
+    .container{
+        padding-left: 132px;
+        padding-right: 132px;
+        padding-top: 32px;
+    }
+
+
+    .title__name{
+        font-size: 3.2rem;
+        font-weight: 600;
+    }
+
+    .random_tags_parent{
+        margin-top: 24px;
+    }
+
+    .title{
+        float: left;
+    }
+
+    .sns{
+        float: right;
+    }
+
+
+    .about p{
+        font-size: 1.5rem;
+        line-height: 30px;
+        letter-spacing: 1px;
+        margin-top: 32px;
+    }
+
+
+    .contents h2{
+        font-size: 1.8rem;
+        display: inline-block;
+        border-left: none;
+        border-right: #5ac8dc solid 2px;
+    }
+    .locationAndDate h2{
+        text-align: right;
+        padding-right: 32px;
+        border-left: none;
+        border-right: #e63c6e solid 2px;
+    }
+
+    .number h2{
+        text-align: right;
+        padding-right: 32px;
+        border-left: none;
+        border-right: #78c850 solid 2px;
+    }
+
+    .cost h2{
+        text-align: right;
+        padding-right: 32px;
+        border-left: none;
+        border-right: #fac81e solid 2px;
+    }
+
+    .schedule h2{
+        display: block;
+        width: 300px;
+        margin: 0 auto;
+        margin-top: 48px;
+        text-align: center;
+        border-right: none;
+    }
+
+
+    .line{
+        display: block;
+        width: 64px;
+        height: 2px;
+        border: 0;
+        margin: 0 auto;
+    }
+    .blue {
+        background-color: #5ac8dc;
+    }
+
+
+    .contents p{
+        display: inline;
+        font-size: 1.4rem;
+        padding-top: 16px;
+        padding-left: 32px;
+    }
+    .contentsBox{
+        padding-left: 64px;
+        border-top: 1px solid #a9a9a9;
+        border-bottom: 1px solid #a9a9a9;
+        padding-top: 16px;
+        padding-bottom: 32px;
+        margin-top: 32px;
+    }
+
+    .shiki{
+        width: 800px;
+    }
+    .shiki p{
+        padding-left: 0px;
+    }
+    .spring{
+        margin-top: 32px;
+        width: 100px;
+        float: left;
+        margin-left: 80px;
+    }
+    .summer{
+        margin-top: 32px;
+        width: 100px;
+        float: left;
+        margin-left: 80px;
+    }
+    .autumn{
+        margin-top: 32px;
+        width: 100px;
+        float: left;
+        margin-left: 80px;
+    }
+    .winter{
+        margin-top: 32px;
+        width: 100px;
+        float: left;
+        margin-left: 80px;
+    }
+    .shiki p{
+        display: block;
+        padding-left: 0px;
     }
 }
